html and styles for full-screen card floor temperature

--- a/src/main.html
+++ b/src/main.html
@@ -6,6 +6,7 @@
         content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=3.0, minimum-scale=0.5">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Умный Яндекс.Дом</title>
+  <!--<link rel="stylesheet" href="../dist/css/main.css">-->
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -336,18 +337,107 @@
           </div>
         </div>
       </div>
-      <div class="gadget-Presets">
-        <span class="gadget-Variants active">manual</span>
-        <span class="gadget-Variants">cold</span>
-        <span class="gadget-Variants">warm</span>
-        <span class="gadget-Variants">hot</span>
-      </div>
-      <div class="gadget-SliderBox">
-        <div class="gadget-Limits">
-          <span class="gadget-LimitMin">-10</span>
-          <span class="gadget-LimitMax">+30</span>
+
+      <div class="gadget-CircleControlBox">
+
+        <div class="gadget-Circle">
+          <div class="gadget-NewValue">+23</div>
         </div>
-        <div class="gadget-Slider"></div>
+
+        <div class="gadget-Ray deg-45"></div>
+        <div class="gadget-Ray deg-42"></div>
+        <div class="gadget-Ray deg-39"></div>
+        <div class="gadget-Ray deg-36"></div>
+        <div class="gadget-Ray deg-33"></div>
+        <div class="gadget-Ray deg-30"></div>
+        <div class="gadget-Ray deg-27"></div>
+        <div class="gadget-Ray deg-24"></div>
+        <div class="gadget-Ray deg-21"></div>
+        <div class="gadget-Ray deg-18"></div>
+        <div class="gadget-Ray deg-15"></div>
+        <div class="gadget-Ray deg-12"></div>
+        <div class="gadget-Ray deg-9"></div>
+        <div class="gadget-Ray deg-6"></div>
+        <div class="gadget-Ray deg-3"></div>
+        <div class="gadget-Ray deg0"></div>
+        <div class="gadget-Ray deg3"></div>
+        <div class="gadget-Ray deg6"></div>
+        <div class="gadget-Ray deg9"></div>
+        <div class="gadget-Ray deg12"></div>
+        <div class="gadget-Ray deg15"></div>
+        <div class="gadget-Ray deg18"></div>
+        <div class="gadget-Ray deg21"></div>
+        <div class="gadget-Ray deg24"></div>
+        <div class="gadget-Ray deg27"></div>
+        <div class="gadget-Ray deg30"></div>
+        <div class="gadget-Ray deg33"></div>
+        <div class="gadget-Ray deg36"></div>
+        <div class="gadget-Ray deg39"></div>
+        <div class="gadget-Ray deg42"></div>
+        <div class="gadget-Ray deg45"></div>
+        <div class="gadget-Ray deg48"></div>
+        <div class="gadget-Ray deg51"></div>
+        <div class="gadget-Ray deg54"></div>
+        <div class="gadget-Ray deg57"></div>
+        <div class="gadget-Ray deg60"></div>
+        <div class="gadget-Ray deg63"></div>
+        <div class="gadget-Ray deg66"></div>
+        <div class="gadget-Ray deg69"></div>
+        <div class="gadget-Ray deg72"></div>
+        <div class="gadget-Ray deg75"></div>
+        <div class="gadget-Ray deg78"></div>
+        <div class="gadget-Ray deg81"></div>
+        <div class="gadget-Ray deg84"></div>
+        <div class="gadget-Ray deg87"></div>
+        <div class="gadget-Ray deg90 active"></div>
+        <div class="gadget-Ray deg93"></div>
+        <div class="gadget-Ray deg96"></div>
+        <div class="gadget-Ray deg99"></div>
+        <div class="gadget-Ray deg102"></div>
+        <div class="gadget-Ray deg105"></div>
+        <div class="gadget-Ray deg108"></div>
+        <div class="gadget-Ray deg111"></div>
+        <div class="gadget-Ray deg114"></div>
+        <div class="gadget-Ray deg117"></div>
+        <div class="gadget-Ray deg120"></div>
+        <div class="gadget-Ray deg123"></div>
+        <div class="gadget-Ray deg126"></div>
+        <div class="gadget-Ray deg129"></div>
+        <div class="gadget-Ray deg132"></div>
+        <div class="gadget-Ray deg135"></div>
+        <div class="gadget-Ray deg138"></div>
+        <div class="gadget-Ray deg141"></div>
+        <div class="gadget-Ray deg144"></div>
+        <div class="gadget-Ray deg147"></div>
+        <div class="gadget-Ray deg150"></div>
+        <div class="gadget-Ray deg153"></div>
+        <div class="gadget-Ray deg156"></div>
+        <div class="gadget-Ray deg159"></div>
+        <div class="gadget-Ray deg162"></div>
+        <div class="gadget-Ray deg165"></div>
+        <div class="gadget-Ray deg168"></div>
+        <div class="gadget-Ray deg171"></div>
+        <div class="gadget-Ray deg174"></div>
+        <div class="gadget-Ray deg177"></div>
+        <div class="gadget-Ray deg180"></div>
+        <div class="gadget-Ray deg183"></div>
+        <div class="gadget-Ray deg186"></div>
+        <div class="gadget-Ray deg189"></div>
+        <div class="gadget-Ray deg192"></div>
+        <div class="gadget-Ray deg195"></div>
+        <div class="gadget-Ray deg198"></div>
+        <div class="gadget-Ray deg201"></div>
+        <div class="gadget-Ray deg204"></div>
+        <div class="gadget-Ray deg207"></div>
+        <div class="gadget-Ray deg210"></div>
+        <div class="gadget-Ray deg213"></div>
+        <div class="gadget-Ray deg216"></div>
+        <div class="gadget-Ray deg219"></div>
+        <div class="gadget-Ray deg222"></div>
+        <div class="gadget-Ray deg225"></div>
+
+
+
       </div>
 
     </div>
@@ -360,8 +450,6 @@
 </div>
 
 <script src="main.js"></script>
-<script id="__bs_script__">//<![CDATA[
-document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.7'><\/script>".replace("HOST", location.hostname));
-//]]></script>
+<!--<script id="__bs_script__">/*<![CDATA[*/document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.7'><\/script>".replace("HOST", location.hostname));//]]></script>-->
 </body>
 </html>
