--- a/src/main.html
+++ b/src/main.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="MainContent-Top">
-        <div class="Card">
+        <div class="Card" data-cardType="temperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -68,7 +68,7 @@
             <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
-        <div class="Card">
+        <div class="Card" data-cardType="temperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -77,7 +77,7 @@
             <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
-        <div class="Card">
+        <div class="Card" data-cardType="temperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -86,7 +86,7 @@
             <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
-        <div class="Card">
+        <div class="Card" data-cardType="temperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -95,7 +95,7 @@
             <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
-        <div class="Card">
+        <div class="Card" data-cardType="temperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -104,7 +104,7 @@
             <div class="Card-Status">Включится в 17:00</div>
           </div>
         </div>
-        <div class="Card">
+        <div class="Card" data-cardType="temperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -125,7 +125,7 @@
       </nav>
     </div>
     <div class="FavoriteScenarios-Content">
-      <div class="Card">
+      <div class="Card" data-cardType="temperature">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -134,7 +134,7 @@
           <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
-      <div class="Card">
+      <div class="Card" data-cardType="temperature">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -143,7 +143,7 @@
           <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
-      <div class="Card">
+      <div class="Card" data-cardType="temperature">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -152,7 +152,7 @@
           <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
-      <div class="Card">
+      <div class="Card" data-cardType="temperature">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -161,7 +161,7 @@
           <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
-      <div class="Card">
+      <div class="Card" data-cardType="light">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -170,7 +170,7 @@
           <div class="Card-Status"></div>
         </div>
       </div>
-      <div class="Card">
+      <div class="Card" data-cardType="light">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -179,7 +179,7 @@
           <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
-      <div class="Card">
+      <div class="Card" data-cardType="light">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -188,7 +188,7 @@
           <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
-      <div class="Card">
+      <div class="Card" data-cardType="light">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -197,7 +197,7 @@
           <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
-      <div class="Card">
+      <div class="Card" data-cardType="light">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -229,7 +229,7 @@
     </nav>
   </div>
   <div class="FavoriteGadgets-Content">
-    <div class="Card FavoriteGadgets-Card">
+    <div class="Card FavoriteGadgets-Card" data-cardType="time">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
@@ -238,7 +238,7 @@
         <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
-    <div class="Card FavoriteGadgets-Card">
+    <div class="Card FavoriteGadgets-Card" data-cardType="time">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
@@ -247,7 +247,7 @@
         <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
-    <div class="Card FavoriteGadgets-Card">
+    <div class="Card FavoriteGadgets-Card" data-cardType="time">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
@@ -256,7 +256,7 @@
         <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
-    <div class="Card FavoriteGadgets-Card">
+    <div class="Card FavoriteGadgets-Card" data-cardType="time">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
@@ -265,7 +265,7 @@
         <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
-    <div class="Card FavoriteGadgets-Card">
+    <div class="Card FavoriteGadgets-Card" data-cardType="time">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
@@ -274,7 +274,7 @@
         <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
-    <div class="Card FavoriteGadgets-Card">
+    <div class="Card FavoriteGadgets-Card" data-cardType="temperature">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
@@ -283,7 +283,7 @@
         <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
-    <div class="Card FavoriteGadgets-Card">
+    <div class="Card FavoriteGadgets-Card" data-cardType="temperature">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
@@ -292,7 +292,7 @@
         <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
-    <div class="Card FavoriteGadgets-Card">
+    <div class="Card FavoriteGadgets-Card" data-cardType="temperature">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
@@ -322,7 +322,7 @@
   </div>
 </footer>
 
-<script src="main.js"></script>
+<script src="./js/bundle.js"></script>
 <!--<script id="__bs_script__">/*<![CDATA[*/document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.24.7'><\/script>".replace("HOST", location.hostname));//]]></script>-->
 </body>
 </html>
