--- a/src/main.html
+++ b/src/main.html
@@ -59,7 +59,7 @@
         </div>
       </div>
       <div class="MainContent-Top">
-        <div class="Card" data-cardType="temperature">
+        <div class="Card" data-cardType="floorTemperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -68,7 +68,7 @@
             <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
-        <div class="Card" data-cardType="temperature">
+        <div class="Card" data-cardType="airTemperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -77,7 +77,7 @@
             <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
-        <div class="Card" data-cardType="temperature">
+        <div class="Card" data-cardType="floorTemperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -86,7 +86,7 @@
             <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
-        <div class="Card" data-cardType="temperature">
+        <div class="Card" data-cardType="airTemperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -95,7 +95,7 @@
             <div class="Card-Status">Начнет охлаждать в 16:30</div>
           </div>
         </div>
-        <div class="Card" data-cardType="temperature">
+        <div class="Card" data-cardType="light">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -104,7 +104,7 @@
             <div class="Card-Status">Включится в 17:00</div>
           </div>
         </div>
-        <div class="Card" data-cardType="temperature">
+        <div class="Card" data-cardType="airTemperature">
           <div class="Card-Pictogram">
             <img src="./img/icons/icon_temperature.svg" alt="">
           </div>
@@ -125,7 +125,7 @@
       </nav>
     </div>
     <div class="FavoriteScenarios-Content">
-      <div class="Card" data-cardType="temperature">
+      <div class="Card" data-cardType="airTemperature">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -134,7 +134,7 @@
           <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
-      <div class="Card" data-cardType="temperature">
+      <div class="Card" data-cardType="airTemperature">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -143,7 +143,7 @@
           <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
-      <div class="Card" data-cardType="temperature">
+      <div class="Card" data-cardType="light">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -152,7 +152,7 @@
           <div class="Card-Status">Начнет охлаждать в 16:30</div>
         </div>
       </div>
-      <div class="Card" data-cardType="temperature">
+      <div class="Card" data-cardType="airTemperature">
         <div class="Card-Pictogram">
           <img src="./img/icons/icon_temperature.svg" alt="">
         </div>
@@ -274,7 +274,7 @@
         <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
-    <div class="Card FavoriteGadgets-Card" data-cardType="temperature">
+    <div class="Card FavoriteGadgets-Card" data-cardType="airTemperature">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
@@ -283,7 +283,7 @@
         <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
-    <div class="Card FavoriteGadgets-Card" data-cardType="temperature">
+    <div class="Card FavoriteGadgets-Card" data-cardType="floorTemperature">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
@@ -292,7 +292,7 @@
         <div class="Card-Status">Начнет охлаждать в 16:30</div>
       </div>
     </div>
-    <div class="Card FavoriteGadgets-Card" data-cardType="temperature">
+    <div class="Card FavoriteGadgets-Card" data-cardType="floorTemperature">
       <div class="Card-Pictogram">
         <img src="./img/icons/icon_temperature.svg" alt="">
       </div>
