--- a/src/main.html
+++ b/src/main.html
@@ -21,13 +21,13 @@
   <nav class="Header-Navigation">
     <ul class="Nav">
       <li class="Nav-Item Nav-Item--active">
-        <a href="#" class="Nav-Link">Сводка</a>
+        <a href="#summary" class="Nav-Link">Сводка</a>
       </li>
       <li class="Nav-Item">
-        <a href="#" class="Nav-Link">Gadgets</a>
+        <a href="#gadgets" class="Nav-Link">Устройства</a>
       </li>
       <li class="Nav-Item">
-        <a href="#" class="Nav-Link">Scenarios</a>
+        <a href="#scenarios" class="Nav-Link">Сценарии</a>
       </li>
     </ul>
     <div class="Header-Hamburger"></div>
@@ -37,7 +37,7 @@
 
 <section class="Content container">
   <section class="MainContent">
-    <h2 class="MainContent-Title">Summary</h2>
+    <h2 id="summary" class="MainContent-Title">Summary</h2>
     <div class="MainContent-Wrap">
       <div class="MainContent-Summary">
         <p class="MainContent-Greeting">Hello, Harry</p>
@@ -116,7 +116,7 @@
       </div>
     </div>
   </section>
-  <section class="FavoriteScenarios">
+  <section id="scenarios" class="FavoriteScenarios">
     <div class="FavoriteScenarios-Header">
       <h2 class="FavoriteScenarios-Title">Favorite Scenarios</h2>
       <nav class="FavoriteScenarios-Nav Nav">
@@ -211,7 +211,7 @@
   </section>
 </section>
 
-<section class="FavoriteGadgets container">
+<section id="gadgets" class="FavoriteGadgets container">
   <div class="FavoriteGadgets-Header">
     <div class="FavoriteGadgets-TitleWrap">
       <div class="FavoriteGadgets-Title">Избранные устройства</div>
