show menu is button now and accessible by TAB, full screen menu links animated underline

--- a/src/main.html
+++ b/src/main.html
@@ -19,7 +19,8 @@
   </div>
 
   <nav class="Header-Navigation">
-    <ul class="Nav">
+    <button class="Header-SiteMenu" aria-label="show hide site menu" title="show hide site menu"><span class="Header-Hamburger"></span></button>
+    <ul class="Nav ">
       <li class="Nav-Item Nav-Item--active">
         <a href="#summary" class="Nav-Link">Сводка</a>
       </li>
@@ -30,7 +31,6 @@
         <a href="#scenarios" class="Nav-Link">Сценарии</a>
       </li>
     </ul>
-    <div class="Header-Hamburger"></div>
   </nav>
 </header>
 
