scroll works for all sections with needed classes

--- a/src/main.html
+++ b/src/main.html
@@ -117,102 +117,103 @@
       </div>
     </div>
   </section>
-  <section id="scenarios" class="FavoriteScenarios">
+  <section id="scenarios" class="FavoriteScenarios withScroll">
     <div class="FavoriteScenarios-Header">
       <h2 class="FavoriteScenarios-Title">Favorite Scenarios</h2>
-      <nav class="FavoriteScenarios-Nav Nav" aria-label="прокрутка избранных сценариев" title="прокрутка избранных сценариев">
+      <nav class="FavoriteScenarios-Nav Nav scrollNav"  aria-label="прокрутка избранных сценариев" title="прокрутка избранных сценариев">
         <button class="Nav-Item linkBack" aria-label="прокрутить назад" title="прокрутить назад">&lt;</button>
         <button class="Nav-Item Nav-Item--active linkForward" aria-label="прокрутить вперёд" title="прокрутить вперёд">&gt;</button>
       </nav>
     </div>
-    <div class="FavoriteScenarios-Content">
-      <div class="Card" data-cardType="airTemperature">
-        <div class="Card-Pictogram">
-          <img src="./img/icons/icon_temperature.svg" alt="">
-        </div>
-        <div class="Card-Content">
-          <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-Status">Начнет охлаждать в 16:30</div>
-        </div>
-      </div>
-      <div class="Card" data-cardType="airTemperature">
-        <div class="Card-Pictogram">
-          <img src="./img/icons/icon_temperature.svg" alt="">
-        </div>
-        <div class="Card-Content">
-          <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-Status">Начнет охлаждать в 16:30</div>
-        </div>
-      </div>
-      <div class="Card" data-cardType="light">
-        <div class="Card-Pictogram">
-          <img src="./img/icons/icon_temperature.svg" alt="">
-        </div>
-        <div class="Card-Content">
-          <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb Xiaomi Yeelight LED Smart Bulb</div>
-          <div class="Card-Status">Начнет охлаждать в 16:30</div>
-        </div>
-      </div>
-      <div class="Card" data-cardType="airTemperature">
-        <div class="Card-Pictogram">
-          <img src="./img/icons/icon_temperature.svg" alt="">
-        </div>
-        <div class="Card-Content">
-          <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-Status">Начнет охлаждать в 16:30</div>
-        </div>
-      </div>
-      <div class="Card" data-cardType="light">
-        <div class="Card-Pictogram">
-          <img src="./img/icons/icon_temperature.svg" alt="">
-        </div>
-        <div class="Card-Content">
-          <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-Status"></div>
-        </div>
-      </div>
-      <div class="Card" data-cardType="light">
-        <div class="Card-Pictogram">
-          <img src="./img/icons/icon_temperature.svg" alt="">
-        </div>
-        <div class="Card-Content">
-          <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-Status">Начнет охлаждать в 16:30</div>
-        </div>
-      </div>
-      <div class="Card" data-cardType="light">
-        <div class="Card-Pictogram">
-          <img src="./img/icons/icon_temperature.svg" alt="">
-        </div>
-        <div class="Card-Content">
-          <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-Status">Начнет охлаждать в 16:30</div>
-        </div>
-      </div>
-      <div class="Card" data-cardType="light">
-        <div class="Card-Pictogram">
-          <img src="./img/icons/icon_temperature.svg" alt="">
-        </div>
-        <div class="Card-Content">
-          <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-Status">Начнет охлаждать в 16:30</div>
-        </div>
-      </div>
-      <div class="Card" data-cardType="light">
-        <div class="Card-Pictogram">
-          <img src="./img/icons/icon_temperature.svg" alt="">
-        </div>
-        <div class="Card-Content">
-          <div class="Card-Title">Philips Cooler</div>
-          <div class="Card-Status">Начнет охлаждать в 16:30</div>
-        </div>
-      </div>
-
-    </div>
+   <div class="scrollWrapper">
+     <div class="FavoriteScenarios-Content">
+       <div class="Card" data-cardType="airTemperature">
+         <div class="Card-Pictogram">
+           <img src="./img/icons/icon_temperature.svg" alt="">
+         </div>
+         <div class="Card-Content">
+           <div class="Card-Title">Philips Cooler</div>
+           <div class="Card-Status">Начнет охлаждать в 16:30</div>
+         </div>
+       </div>
+       <div class="Card" data-cardType="airTemperature">
+         <div class="Card-Pictogram">
+           <img src="./img/icons/icon_temperature.svg" alt="">
+         </div>
+         <div class="Card-Content">
+           <div class="Card-Title">Philips Cooler</div>
+           <div class="Card-Status">Начнет охлаждать в 16:30</div>
+         </div>
+       </div>
+       <div class="Card" data-cardType="light">
+         <div class="Card-Pictogram">
+           <img src="./img/icons/icon_temperature.svg" alt="">
+         </div>
+         <div class="Card-Content">
+           <div class="Card-Title">Xiaomi Yeelight LED Smart Bulb Xiaomi Yeelight LED Smart Bulb</div>
+           <div class="Card-Status">Начнет охлаждать в 16:30</div>
+         </div>
+       </div>
+       <div class="Card" data-cardType="airTemperature">
+         <div class="Card-Pictogram">
+           <img src="./img/icons/icon_temperature.svg" alt="">
+         </div>
+         <div class="Card-Content">
+           <div class="Card-Title">Philips Cooler</div>
+           <div class="Card-Status">Начнет охлаждать в 16:30</div>
+         </div>
+       </div>
+       <div class="Card" data-cardType="light">
+         <div class="Card-Pictogram">
+           <img src="./img/icons/icon_temperature.svg" alt="">
+         </div>
+         <div class="Card-Content">
+           <div class="Card-Title">Philips Cooler</div>
+           <div class="Card-Status"></div>
+         </div>
+       </div>
+       <div class="Card" data-cardType="light">
+         <div class="Card-Pictogram">
+           <img src="./img/icons/icon_temperature.svg" alt="">
+         </div>
+         <div class="Card-Content">
+           <div class="Card-Title">Philips Cooler</div>
+           <div class="Card-Status">Начнет охлаждать в 16:30</div>
+         </div>
+       </div>
+       <div class="Card" data-cardType="light">
+         <div class="Card-Pictogram">
+           <img src="./img/icons/icon_temperature.svg" alt="">
+         </div>
+         <div class="Card-Content">
+           <div class="Card-Title">Philips Cooler</div>
+           <div class="Card-Status">Начнет охлаждать в 16:30</div>
+         </div>
+       </div>
+       <div class="Card" data-cardType="light">
+         <div class="Card-Pictogram">
+           <img src="./img/icons/icon_temperature.svg" alt="">
+         </div>
+         <div class="Card-Content">
+           <div class="Card-Title">Philips Cooler</div>
+           <div class="Card-Status">Начнет охлаждать в 16:30</div>
+         </div>
+       </div>
+       <div class="Card" data-cardType="light">
+         <div class="Card-Pictogram">
+           <img src="./img/icons/icon_temperature.svg" alt="">
+         </div>
+         <div class="Card-Content">
+           <div class="Card-Title">Philips Cooler</div>
+           <div class="Card-Status">Начнет охлаждать в 16:30</div>
+         </div>
+       </div>
+     </div>
+   </div>
   </section>
 </section>
 
-<section id="gadgets" class="FavoriteGadgets container">
+<section id="gadgets" class="FavoriteGadgets container withScroll">
   <div class="FavoriteGadgets-Header">
     <div class="FavoriteGadgets-TitleWrap">
       <div class="FavoriteGadgets-Title">Избранные устройства</div>
@@ -224,12 +225,12 @@
         <div class="FavoriteGadgets-Tag">Камеры</div>
       </div>
     </div>
-    <nav class="FavoriteGadgets-Nav Nav" aria-label="прокрутка избранных устройств" title="прокрутка избранных устройств">
+    <nav class="FavoriteGadgets-Nav Nav scrollNav" aria-label="прокрутка избранных устройств" title="прокрутка избранных устройств">
       <button class="Nav-Item linkBack" aria-label="прокрутить назад" title="прокрутить назад">&lt;</button>
       <button class="Nav-Item Nav-Item--active linkForward" aria-label="прокрутить вперёд" title="прокрутить вперёд">&gt;</button>
     </nav>
   </div>
-  <div class="ScrollWrapper">
+  <div class="scrollWrapper">
     <div class="FavoriteGadgets-Content">
       <div class="Card FavoriteGadgets-Card" data-cardType="time">
         <div class="Card-Pictogram">
