convert selects to divs for screens more than 1001px width

--- a/src/main.html
+++ b/src/main.html
@@ -223,13 +223,13 @@
   <div class="FavoriteGadgets-Header">
     <div class="FavoriteGadgets-TitleWrap">
       <div class="FavoriteGadgets-Title">Избранные устройства</div>
-      <div class="FavoriteGadgets-Tags">
-        <div class="FavoriteGadgets-Tag FavoriteGadgets-Tag--active">Все</div>
-        <div class="FavoriteGadgets-Tag">Кухня</div>
-        <div class="FavoriteGadgets-Tag">Зал</div>
-        <div class="FavoriteGadgets-Tag">Лампочки</div>
-        <div class="FavoriteGadgets-Tag">Камеры</div>
-      </div>
+      <select class="FavoriteGadgets-Tags customTags" data-test="test" >
+        <option class="FavoriteGadgets-Tag FavoriteGadgets-Tag--active">Все</option>
+        <option class="FavoriteGadgets-Tag">Кухня</option>
+        <option class="FavoriteGadgets-Tag">Зал</option>
+        <option class="FavoriteGadgets-Tag">Лампочки</option>
+        <option class="FavoriteGadgets-Tag">Камеры</option>
+      </select>
     </div>
     <nav class="FavoriteGadgets-Nav Nav scrollNav" aria-label="прокрутка избранных устройств" title="прокрутка избранных устройств">
       <button class="Nav-Item linkBack" aria-label="прокрутить назад" title="прокрутить назад">&lt;</button>
